--- a/research.html
+++ b/research.html
@@ -66,6 +66,42 @@
 
       </div>
 
+      <hr style="margin:32px 0; opacity:0.2;">
+
+      <div class="project-area">
+
+        <h2>
+          Anti-cancer Drug Design: Targeting ABL1
+        </h2>
+
+        <p class="project-meta">
+          <strong>Cheminformatics · Computational Drug Discovery</strong>
+        </p>
+
+        <p>
+          Built a ligand-based virtual screening workflow to identify candidate inhibitors of the ABL1 tyrosine kinase.
+          The pipeline combines physicochemical filtering, PAINS removal, molecular fingerprinting (MACCS and Morgan),
+          similarity screening against a reference inhibitor (Dasatinib), enrichment evaluation, Butina clustering,
+          maximum common substructure analysis, and a supervised neural network classifier to prioritise active compounds.
+        </p>
+
+        <p class="project-meta">
+          <strong>Independent research project</strong><br>
+          Awarded <strong>2nd Position</strong> for paper presentation at an international conference hosted by
+          St. Stephen’s College.
+        </p>
+
+        <p class="project-note">
+          Public repository:
+          <a href="https://github.com/tejasig/abl1-virtual-screening-ml"
+             target="_blank"
+             style="color:rgba(170,90,255,0.9); text-decoration:none;">
+            abl1-virtual-screening-ml
+          </a>
+        </p>
+
+      </div>
+
     </section>
 
     <!-- Footer -->
@@ -84,7 +120,7 @@
           </svg>
         </a>
 
-                <!-- GitHub -->
+        <!-- GitHub -->
         <a class="icon-link"
            href="https://github.com/tejasig"
            target="_blank"
