--- a/research.html
+++ b/research.html
@@ -29,6 +29,7 @@
 
       <hr style="margin:32px 0; opacity:0.2;">
 
+      <!-- Project 1 -->
       <div class="project-area">
 
         <h2>
@@ -68,6 +69,7 @@
 
       <hr style="margin:32px 0; opacity:0.2;">
 
+      <!-- Project 2 -->
       <div class="project-area">
 
         <h2>
@@ -79,15 +81,18 @@
         </p>
 
         <p>
-          Built a ligand-based virtual screening workflow to identify candidate inhibitors of the ABL1 tyrosine kinase.
-          The pipeline combines physicochemical filtering, PAINS removal, molecular fingerprinting (MACCS and Morgan),
-          similarity screening against a reference inhibitor (Dasatinib), enrichment evaluation, Butina clustering,
-          maximum common substructure analysis, and a supervised neural network classifier to prioritise active compounds.
+          Designed and implemented a ligand-based virtual screening workflow to identify
+          candidate inhibitors of the ABL1 tyrosine kinase. The pipeline integrates
+          physicochemical filtering, PAINS removal, molecular fingerprinting (MACCS and Morgan),
+          similarity screening against a reference inhibitor (Dasatinib), enrichment evaluation,
+          Butina clustering, maximum common substructure analysis, and a supervised neural
+          network classifier to prioritise active compounds.
         </p>
 
         <p class="project-meta">
           <strong>Independent research project</strong><br>
-          Awarded <strong>2nd Position</strong> for paper presentation at an international conference hosted by
+          Awarded <strong>2nd Position</strong> for paper presentation at the
+          <em>International Conference “Advances in Pharmaceutical Sciences: Bridging Academia and Industry”</em>,
           St. Stephen’s College.
         </p>
 
@@ -108,7 +113,11 @@
     <footer class="footer">
       <div class="icon-row">
 
-        <a class="icon-link" href="https://www.linkedin.com/in/tejasi-gupta-959815156/" target="_blank" aria-label="LinkedIn">
+        <!-- LinkedIn -->
+        <a class="icon-link"
+           href="https://www.linkedin.com/in/tejasi-gupta-959815156/"
+           target="_blank"
+           aria-label="LinkedIn">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
               d="M20.45 20.45h-3.56v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85
@@ -143,7 +152,10 @@
           </svg>
         </a>
 
-        <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
+        <!-- Email -->
+        <a class="icon-link"
+           href="mailto:tejasi1202@gmail.com"
+           aria-label="Email">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
               d="M20 4H4c-1.1 0-2 .9-2
